@@ -32,7 +32,7 @@ import org.apache.hadoop.util.Time;
  * check if blocks in the old window are more than the fixed time interval. If
  * yes, purge the old window and then move blocks in current window to old
  * window.
- *
+ * 
  * @param <L> Location type
  */
 public class MovedBlocks<L> {
@@ -50,29 +50,29 @@ public class MovedBlocks<L> {
     public synchronized void clearLocations() {
       locations.clear();
     }
-
+    
     /** add a location */
     public synchronized void addLocation(L loc) {
       if (!locations.contains(loc)) {
         locations.add(loc);
       }
     }
-
+    
     /** @return if the block is located on the given location. */
     public synchronized boolean isLocatedOn(L loc) {
       return locations.contains(loc);
     }
-
+    
     /** @return its locations */
     public synchronized List<L> getLocations() {
       return locations;
     }
-
+    
     /* @return the block */
     public Block getBlock() {
       return block;
     }
-
+    
     /* Return the length of the block */
     public long getNumBytes() {
       return block.getNumBytes();
@@ -87,7 +87,7 @@ public class MovedBlocks<L> {
   private long lastCleanupTime = Time.monotonicNow();
   private final List<Map<Block, Locations<L>>> movedBlocks
       = new ArrayList<Map<Block, Locations<L>>>(NUM_WINS);
-
+  
   /** initialize the moved blocks collection */
   public MovedBlocks(long winTimeInterval) {
     this.winTimeInterval = winTimeInterval;
@@ -107,7 +107,7 @@ public class MovedBlocks<L> {
   /** @return if a block is marked as moved */
   public synchronized boolean contains(Block block) {
     return movedBlocks.get(CUR_WIN).containsKey(block) ||
-        movedBlocks.get(OLD_WIN).containsKey(block);
+      movedBlocks.get(OLD_WIN).containsKey(block);
   }
 
   /** remove old blocks */
